# vad

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/scripts/: ci_summary.py
.github/workflows/: ci.yml
app/: plots.py  sidebar.py  state.py  streamlit_app.py
app/audio/: io.py  upload.py
app/components/: offline.py  online.py  utils.py
checkpoints/: causal_vad.pt
docs/: Makefile  baselines.rst  conf.py  data.datasets.rst  data.preprocessing.rst  data.rst  demo.rst  design.rst  evaluation.rst  index.rst  installation.rst  model.rst  models.rst  modules.rst  quickstart.rst  training.rst  visualization.rst
docs/api/: index.rst  vad.app.audio.microphone.rst  vad.app.audio.rst  vad.app.audio.upload.rst  vad.app.components.offline.rst  vad.app.components.online.rst  vad.app.components.rst  vad.app.components.utils.rst  vad.app.plots.rst  vad.app.rst  vad.app.sidebar.rst  vad.app.state.rst  vad.app.streamlit_app.rst  vad.config.rst  vad.data.audio_utils.rst  vad.data.build.rst  vad.data.collate.rst  vad.data.datasets.base.rst  vad.data.datasets.librivad.rst  vad.data.datasets.processed.rst  vad.data.datasets.rst  vad.data.datasets.samples.rst  vad.data.file_utils.rst  vad.data.loaders.rst  vad.data.preprocessing.features.rst  vad.data.preprocessing.labels.rst  vad.data.preprocessing.preprocessing.rst  vad.data.preprocessing.rst  vad.data.preprocessing.waveform.rst  vad.data.rst  vad.inference.offline.rst  vad.inference.rst  vad.inference.streaming.rst  vad.inference.utils.rst  vad.models.causal_vad.rst  vad.models.loading.rst  vad.models.rst  vad.rst  vad.training.callbacks.rst  vad.training.checkpoint_manager.rst  (+14 more)
scripts/: compare_models.py  infer_offline_file.py  librivad_debug.py  loaders_debug.py  stream_file.py  train.py  training_dataset.py
src/vad/: __main__.py  config.py
src/vad/app/: plots.py  sidebar.py  streamlit_app.py
src/vad/app/audio/: upload.py
src/vad/app/components/: offline.py  online.py  utils.py
src/vad/baseline/: webrtc.py
src/vad/cli/: compare_models.py  infer_offline_file.py  stream_file.py  train.py  utils.py
src/vad/data/: __init__.py  audio_utils.py  base.py  build.py  collate.py  file_utils.py  loaders.py  samples.py  utils.py
src/vad/data/datasets/: __init__.py  base.py  librivad.py  processed.py  samples.py
src/vad/data/preprocessing/: __init__.py  audio.py  features.py  labels.py  preprocessing.py  waveform.py
src/vad/data/utils/: file_utils.py
src/vad/evaluate/: evaluate.py  metrics.py  webrtc_points.py
src/vad/inference/: __init__.py  adapters.py  offline.py  streaming.py  utils.py
src/vad/models/: __init__.py  causal_conv.py  causal_vad.py  loading.py
src/vad/training/: __init__.py  callbacks.py  checkpoint_manager.py  formatting.py  logger.py  loops.py  metrics.py  run_config.py
src/vad/visualization/: __init__.py  alignment.py  evaluation.py  features.py  helpers.py  inference.py  labels.py  style.py  waveform.py
