[project]
name = "vad"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "MIT"}
authors = [{name="Antje Farnier"},]
dependencies = ["numba (==0.58.1)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
    "vulture>=2.11",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.7.0",
    "bump-my-version>=0.28.0",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.1.29",
    "myst-parser>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/vad --cov-report=term-missing --cov-fail-under=80"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that wire multiple components together",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.bandit]
skips = ["B101"]

[tool.vulture]
min_confidence = 80

[tool.bumpversion]
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
key_path = "project.version"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
