[project]
name = "vad"
version = "0.1.0"
description = "Voice activity detection project with training, evaluation, baselines, and demo."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Antje Farnier" }]
dependencies = [
    "numpy>=1.26,<2",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchmetrics>=1.9",
    "tqdm>=4.67",
    "tensorboard>=2.20",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
    "vulture>=2.11",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.7.0",
    "bump-my-version>=0.28.0",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.1.29",
    "myst-parser>=2.0.0",
]
demo = [
    "streamlit>=1.56",
    "matplotlib>=3.10",
    "plotly>=6.0",
    "pandas>=2.0",
]
baseline = ["webrtcvad>=2.0.14",]

[project.scripts]
vad-train = "vad.cli.train:main"
vad-infer-offline = "vad.cli.infer_offline_file:main"
vad-stream-file = "vad.cli.stream_file:main"
vad-compare-models = "vad.cli.compare_models:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=vad --cov-report=term-missing --cov-fail-under=80"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that wire multiple components together",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "SIM"]

[tool.bandit]
skips = ["B101"]

[tool.vulture]
min_confidence = 80

[tool.bumpversion]
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
key_path = "project.version"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = "(^\\.github/)"

[[tool.mypy.overrides]]
module = ["torchaudio", "webrtcvad", "plotly.*"]
ignore_missing_imports = true
